--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "esbuild": "^0.25.0"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
