--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.2.4",
-    "esbuild": "^0.25.0"
+    "esbuild": "^0.25.0",
+    "vite": "^6.2.4"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
